--- a/ecommerce/src/styles/App.styles.scss
+++ b/ecommerce/src/styles/App.styles.scss
@@ -4,6 +4,7 @@
 @import '../components/Header/Logo/logo.styles';
 @import '../components/buttons/buttons.styles';
 @import '../components/Header/Navbar/navbar.styles';
+@import '../components/FormElements/comment.styles';
 
 *,
 *::before,
